# presidente

./: .gitignore  AUTHORS  NEWS  README  configure.ac  index.html
src/: Makefile.am
src/client/: Makefile.am  client.cpp  client.h  main.cpp  presidente-client
src/common/: Makefile.am  socket.cpp  socket.h
src/server/: Makefile.am  main.cpp  presidente-server  server.cpp  server.h
src/server/.deps/: main.Po
uml/: 128002  128130.diagram  128386.diagram  129282.diagram  129410.diagram  129538.diagram  129666.diagram  130434.diagram  130562.diagram  130690.diagram  130818.diagram  131586.diagram  134658  138114.diagram  141186  144642.diagram  151298.diagram  157954.diagram  158082.diagram  158210.diagram  158338.diagram  164994.diagram  165122.diagram  171650.diagram  171906.diagram  172034.diagram  2.session  stereotypes  uml.prj
